# rocky-from-hail-mary

./: .gitignore  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
configs/: rocky-gemma-e4b-v2.yaml  rocky-gemma-e4b.yaml
contracts/: README.md  domain.json
contracts/prompts/: persona-judge.txt  rocky-system.txt
research/seed-corpus/: evaluation-golden-v2.jsonl  evaluation-persona-holdout.jsonl  hand-authored.jsonl  project-hail-mary.seed.jsonl
research/seed-corpus/exports/: rocky-v1.holdout.jsonl  rocky-v1.manifest.json  rocky-v1.train.jsonl  rocky-v2.holdout.jsonl  rocky-v2.manifest.json  rocky-v2.train.jsonl
research/seed-corpus/preferences/: rocky-v2.persona-dpo.jsonl
runs/rocky-gemma-e4b-v2/: Modelfile
scripts/: sync-contracts.mjs
training/: pyproject.toml
training/prompts/: rocky-system.txt
training/rocky_training/: __main__.py  cli.py  endpoint_client.py  eval_gates.py  export_gguf.py  golden_prompts.py  inspect_failures.py  merge_adapter.py  metadata_parse.py  model_spec.py  paths.py  persona_judge.py  run_eval.py  smoke_sft.py  train_dpo.py  train_sft.py  trainer_jsonl.py
training/specs/: rocky-gemma-e4b-v2.yaml  rocky-gemma-e4b.yaml
training/templates/: gemma4_training.jinja
training/tests/: test_cli.py  test_endpoint_client.py  test_eval_gates.py  test_export_gguf.py  test_inspect_failures.py  test_merge_adapter.py  test_model_spec.py  test_persona_judge.py  test_run_eval.py  test_smoke_sft.py  test_train_dpo.py  test_train_sft.py
training/tests/fixtures/: golden.eval.jsonl  smoke.train.jsonl
(+1 files in other folders)
