[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rocky-training"
version = "0.0.0"
description = "Rocky model training CLI"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0.2"]

[project.optional-dependencies]
train = [
  "accelerate>=1.2.0",
  "bitsandbytes>=0.45.0",
  "datasets>=3.2.0",
  "peft>=0.14.0",
  "torch>=2.5.0",
  "transformers>=4.48.0",
  "trl>=0.13.0",
]
dev = ["pytest>=8.3.0"]

[project.scripts]
rocky-training = "rocky_training.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rocky_training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
